--- a/HW1/assign1p1.html
+++ b/HW1/assign1p1.html
@@ -41,7 +41,7 @@
         He also defends the kids against Billy, and is knocked unconscious before Max is able to disable her brother.
     </p>
     <button onclick="clickButton()">Click Here to Be A Fan!</button> <br><br>
-    <a href="secret.html">Click here for a secret!</a>
+    <a href="assign1p2.html">Click here for a secret!</a>
     <script>
         function clickButton() {
             alert("Thank you for being a Steve Harrington!")
